--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -28,7 +28,7 @@
         <item>
          <layout class="QGridLayout" name="gridLayout_3" columnstretch="3,0">
           <item row="0" column="1">
-           <layout class="QGridLayout" name="gridLayout_5" rowstretch="0,0,0,0,0,0,0" columnstretch="0">
+           <layout class="QGridLayout" name="gridLayout_5" rowstretch="0,0,0,0,0,0" columnstretch="0">
             <property name="sizeConstraint">
              <enum>QLayout::SetNoConstraint</enum>
             </property>
@@ -215,7 +215,7 @@
           </item>
           <item row="0" column="0">
            <widget class="QCustomPlot" name="customPlot" native="true">
-            <layout class="QVBoxLayout" name="verticalLayout_5" stretch=""/>
+            <layout class="QVBoxLayout" name="verticalLayout_5"/>
            </widget>
           </item>
          </layout>
@@ -231,6 +231,13 @@
          <layout class="QHBoxLayout" name="horizontalLayout_4">
           <item>
            <widget class="QPlainTextEdit" name="savePathText"/>
+          </item>
+          <item>
+           <widget class="QPushButton" name="saveButton">
+            <property name="text">
+             <string>Save</string>
+            </property>
+           </widget>
           </item>
          </layout>
         </item>
@@ -273,8 +280,6 @@
    <container>1</container>
   </customwidget>
  </customwidgets>
- <resources>
-  <include location="app_resources.qrc"/>
- </resources>
+ <resources/>
  <connections/>
 </ui>
